--- a/Example1/index.html
+++ b/Example1/index.html
@@ -17,7 +17,7 @@
                 // Display the content to the console
                 console.log("Hello world!");
                 // Display content on the page in the HTML element with id output
-                output.textContent = data; // Display content on the page
+                document.getElementById('output').textContent = data; // Display content on the page
             })
             .catch(error => console.error('Error reading file:', error));
     // End a block of Javascript code
